2010-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.42 released.

        * More error handling cleanup for iteraction with
          Net::FullAuto


2010-08-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.41 released.

        * More error handling cleanup for iteraction with
          Net::FullAuto


2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.40 released.

        * Fixed Makefile.PL Term::ReadKey dependency


2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.39 released.

        * Fixed some deprecated defined(%hash) statements


2010-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.36 released.

        * Changed Terminal size testing code in order to not break
          CPAN testing.


2010-08-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.35 released.

        * Added code to implement 'tosspass' condition for Net::FullAuto


2010-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.34 released.

        * Added test for Term::ReadKey and if found use termheight
          to define whitespace header for screens

        * Fixed bug https://rt.cpan.org/Ticket/Display.html?id=18382
          where the screen was not properly clearign for Windows

        $ Fixed bug with "Default" setting

        * Changes to repair interactions with FullAuto architecture


2010-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.33 released.

        * Changes to repair interactions with FullAuto architecture


2008-02-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.32 released.

        * Added Macro enhancement ]Previous[{Menu_Label} to POD
          documentation.

        * Repaired and updated code so that Macros work as advertised

        * Repaired subroutine use with Convey => '&sub()', and