@@ -1,3 +1,10 @@
+2010-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.43 released.
+
+        * Added 'Custom' to Net::FullAuto paths
+
+
 2010-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.42 released.
